add two new recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/pasta.html"></a>
+    <p><a href="/recipes/pasta.html">Pasta</a></p>
+    <p><a href="recipes/pizza.html">Pizza</a></p>
 </body>
 </html>
