--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="/recipes/pasta.html">Pasta</a></p>
-    <p><a href="recipes/pizza.html">Pizza</a></p>
+    <a href="/recipes/pasta.html">Pasta</a>
+    <a href="recipes/pizza.html">Pizza</a>
+    <a href="recipes/chicken.html">Chicken</a>
 </body>
 </html>
