--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/pasta.html">Pasta</a>
-    <a href="recipes/pizza.html">Pizza</a>
-    <a href="recipes/chicken.html">Chicken</a>
+    <ul>
+        <li><a>href="/recipes/pasta.html">Pasta</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
+        <li><a href="recipes/chicken.html">Chicken</a></li>
+    </ul>    
 </body>
 </html>
