--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,5 +1,5 @@
 <h1>Pasta</h1>
-<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9050026.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="">
+<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9050026.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="pasta pic">
 <h2>Quick Pasta Carbonara</h2>
 <p>The rich flavors of bacon and green peas combine with cheesy, creamy carbonara sauce made without egg to serve with hot, cooked pasta.</p>
 
