--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a>href="/recipes/pasta.html">Pasta</a></li>
+        <li><a href="/recipes/pasta.html">Pasta</a></li>
         <li><a href="recipes/pizza.html">Pizza</a></li>
         <li><a href="recipes/chicken.html">Chicken</a></li>
     </ul>    
