Edit recipe head and body tag

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,26 +1,39 @@
-<h1>Pasta</h1>
-<img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9050026.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="pasta pic">
-<h2>Quick Pasta Carbonara</h2>
-<p>The rich flavors of bacon and green peas combine with cheesy, creamy carbonara sauce made without egg to serve with hot, cooked pasta.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Pasta</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9050026.jpg&w=595&h=595&c=sc&poi=face&q=60" alt="pasta pic">
+    <h2>Quick Pasta Carbonara</h2>
+    <p>The rich flavors of bacon and green peas combine with cheesy, creamy carbonara sauce made without egg to serve with hot, cooked pasta.</p>
 
-<p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>½ pound medium-size pasta</li>
-        <li>4 slices OSCAR MAYER Bacon, chopped</li>
-        <li>4 ounces PHILADELPHIA Cream Cheese, cubed</li>
-        <li>1 cup frozen peas</li>
-        <li>¾ cup milk</li>
-        <li>½ cup KRAFT Grated Parmesan Cheese</li>
-        <li>½ teaspoon garlic powder</li>
-    </ul>
-</p>
-<p>
-    <h3>Steps</h3>
-    <ol>
-        <li>Cook pasta as directed on the package. Drain pasta and set aside.</li>
-        <li>Meanwhile, cook bacon in a large skillet until crisp. Drain bacon on paper towels. Reserve 2 tablespoons drippings in the skillet.</li>
-        <li>Cook pasta as directed on the package. Drain pasta and set aside.</li>
-        <li>Cook pasta as directed on the package. Drain pasta and set aside.</li>
-    </ol>
-</p>
+    <p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>½ pound medium-size pasta</li>
+            <li>4 slices OSCAR MAYER Bacon, chopped</li>
+            <li>4 ounces PHILADELPHIA Cream Cheese, cubed</li>
+            <li>1 cup frozen peas</li>
+            <li>¾ cup milk</li>
+            <li>½ cup KRAFT Grated Parmesan Cheese</li>
+            <li>½ teaspoon garlic powder</li>
+        </ul>
+    </p>
+    <p>
+        <h3>Steps</h3>
+        <ol>
+            <li>Cook pasta as directed on the package. Drain pasta and set aside.</li>
+            <li>Meanwhile, cook bacon in a large skillet until crisp. Drain bacon on paper towels. Reserve 2 tablespoons drippings in the skillet.</li>
+            <li>Cook pasta as directed on the package. Drain pasta and set aside.</li>
+            <li>Cook pasta as directed on the package. Drain pasta and set aside.</li>
+        </ol>
+    </p>
+</body>
+</html>
+
+
